--- a/app/src/main/res/layout/activity_view_recycler.xml
+++ b/app/src/main/res/layout/activity_view_recycler.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-   >
+    android:background="#ACC5E1"
+    android:orientation="horizontal">
 
     <LinearLayout
         android:id="@+id/linearLayout"
