--- a/app/src/main/res/layout/rodents_item_list.xml
+++ b/app/src/main/res/layout/rodents_item_list.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="wrap_content"
+    android:background="#ACC5E1"
     tools:context=".ROOM.Rodent.ViewRodents">
 
     <TextView
