--- a/app/src/main/res/layout/vets_item_list.xml
+++ b/app/src/main/res/layout/vets_item_list.xml
@@ -5,13 +5,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    android:background="#ACC5E1">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
 
         <LinearLayout
             android:id="@+id/linearLayoutToolbar"
@@ -38,34 +41,52 @@
                 android:id="@+id/textView4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:text="Nazwa weterynarza:"
                 android:textColor="#014D70"
                 android:textColorHint="#77147A"
                 android:textSize="16sp" />
 
-            <EditText
-                android:id="@+id/editTextName_vet"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="6dp"
-                android:layout_marginLeft="10dp"
-                android:hint="Nazwa"
-                android:maxLength="50"
-                android:maxLines="2"
-                android:textColor="#014D70"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textViewRequired_vet"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:text="*"
+                    android:textColor="#E12222"
+                    android:textSize="18sp"
+                    android:visibility="gone" />
+
+                <EditText
+                    android:id="@+id/editTextName_vet"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:hint="Nazwa"
+                    android:maxLength="100"
+                    android:maxLines="3"
+                    android:textColor="#014D70"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
                 android:maxLength="120"
                 android:maxLines="4"
-                android:text="Adres"
+                android:text="Adres:"
                 android:textColor="#014D70"
                 android:textColorHint="#77147A"
                 android:textSize="16sp" />
@@ -74,7 +95,8 @@
                 android:id="@+id/editTextAddress_vet"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 android:hint="Adres"
                 android:maxLines="3"
                 android:textColor="#014D70"
@@ -82,10 +104,11 @@
 
             <TextView
                 android:id="@+id/textView6"
-                android:layout_width="126dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:text="Telefon"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:text="Telefon:"
                 android:textColor="#014D70"
                 android:textColorHint="#77147A"
                 android:textSize="16sp" />
@@ -105,7 +128,7 @@
                         android:id="@+id/editTextPhone_vet"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginStart="10dp"
                         android:hint="Telefon"
                         android:inputType="number"
                         android:maxLength="16"
@@ -137,7 +160,8 @@
                 android:id="@+id/textView7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
                 android:text="Ewentualne notatki:"
                 android:textColor="#014D70"
                 android:textColorHint="#77147A"
@@ -147,7 +171,8 @@
                 android:id="@+id/editTextPeriodicity_med"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 android:hint="Notatki"
                 android:maxLength="300"
                 android:maxLines="5"
@@ -158,7 +183,8 @@
                 android:id="@+id/textViewRodentRelationsInfo_vet"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_weight="1"
                 android:ellipsize="none"
                 android:maxLines="8"
