--- a/app/src/main/res/layout/weight_info_chinchilla.xml
+++ b/app/src/main/res/layout/weight_info_chinchilla.xml
@@ -3,7 +3,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
-android:layout_height="match_parent">
+android:layout_height="match_parent"
+    android:background="#ACC5E1">
 
         <LinearLayout
             android:layout_width="match_parent"
